recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: '=' expected but ';' found.
	var length
^Koch:15: error: '=' expected but ';' found.
if (levels==0) {
^